--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^4.22.3",
+    "axios": "^1.2.0",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
     "country-state-city": "^3.0.1",
